# Congestion-Control-Identifier

./: README.md
cong-control-identifier/: README.md  pyproject.toml
cong-control-identifier/client_inference_tcp/: .gitignore  README.md  client.py  parse_trace.py  transform.py
cong-control-identifier/client_inference_tcp/traces/: trace.pcap  trace2.pcap  trace3.pcap  trace4.pcap
cong-control-identifier/cong_control_identifier/: capture_point.py  client.py  server.py
cong-control-identifier/tcp_flow_analysis/: fit_features.py  globals.py  test.py  test_features.py  test_simple.py  train.py  train_features.py  train_simple.py
cong-control-identifier/tcp_flow_analysis/models/: cca_classifier.pkl
cong-control-identifier/tcp_flow_capture/: README.md  client.sh  parse_trace.py  server.sh
