[tool.poetry]
name = "cong-control-identifier"
version = "0.1.0"
description = ""
authors = ["Philip Yi <py55@duke.edu>", "Harrison York <hpy@duke.edu>", ""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aioquic = "^1.3.0"
pyshark = "^0.6"
pandas = "^2.3.3"
matplotlib = "^3.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
